--- a/base/myapp/deployment.yaml
+++ b/base/myapp/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp
+  name: gitops-demo-node-app
 spec:
+  replicas: 1
   selector:
     matchLabels:
-      app: myapp
-  replicas: 1
+      app: node-app
   template:
     metadata:
       labels:
-        app: myapp
+        app: node-app
     spec:
       containers:
-      - name: myapp
-        image: nanajanashia/argocd-app:1.2
+      - name: gitops-demo-node-app-container
+        image: vipulshukla71098/gitops-demo-node-app:14
         ports:
-        - containerPort: 8080
+        - containerPort: 5000
