--- a/base/myapp/service.yaml
+++ b/base/myapp/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp-service
+  name: node-app-svc
 spec:
-  selector:
-    app: myapp
+  type: NodePort
   ports:
-  - port: 8080
-    protocol: TCP
-    targetPort: 8080
-  
+  - port: 80
+    targetPort: 5000
+    nodePort: 32000
+  selector:
+    app: node-app
