--- a/config.yaml
+++ b/config.yaml
@@ -1,23 +1,23 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: myapp-argo-application
-  namespace: argocd
-spec:
-  project: default
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: myapp-argo-application
+#   namespace: argocd
+# spec:
+#   project: default
 
-  source:
-    repoURL: https://github.com/vipul71098/kuberntes-helm-repo.git
-    targetRevision: HEAD
-    path: overlays/dev/
-  destination: 
-    server: https://kubernetes.default.svc
-    namespace: myapp
+#   source:
+#     repoURL: https://github.com/vipul71098/kuberntes-helm-repo.git
+#     targetRevision: HEAD
+#     path: overlays/dev/
+#   destination: 
+#     server: https://kubernetes.default.svc
+#     namespace: myapp
 
-  syncPolicy:
-    syncOptions:
-    - CreateNamespace=true
+#   syncPolicy:
+#     syncOptions:
+#     - CreateNamespace=true
 
-    automated:
-      selfHeal: true
-      prune: true
+#     automated:
+#       selfHeal: true
+#       prune: true
