--- a/overlays/dev/gitops-demo-node-app/kustomization.yaml
+++ b/overlays/dev/gitops-demo-node-app/kustomization.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../../../base/myapp/
+  - ../../../base/gitops-demo-node-app/
 patches:
   - path: deployment.yaml
     target:
